# homecinema

./: .gitignore  README.md  meson.build  python-deps.json  space.koyu.hometheater.json  space.koyu.videoh.json
data/: meson.build  space.koyu.hometheater.desktop.in  space.koyu.hometheater.gschema.xml  space.koyu.hometheater.metainfo.xml.in  space.koyu.hometheater.service.in  space.koyu.videoh.desktop.in  space.koyu.videoh.gschema.xml  space.koyu.videoh.metainfo.xml.in  space.koyu.videoh.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: episodes.ui  hometheater.gresource.xml  hometheater.in  item.ui  main.py  meson.build  player.ui  settings.ui  videoh.gresource.xml  videoh.in  window.ui
src/hometheater/: __init__.py  episodes.py  imdb.py  item.py  main.py  player.py  player.py.old  style.css  tvmaze.py  window.py
src/videoh/: __init__.py  episodes.py  imdb.py  item.py  main.py  player.py  player.py.old  tvmaze.py  wikipedia.py  window.py
tools/: flatpak-pip-generator  genpipdeps
